@@ -46,6 +46,7 @@ class TestBlas: public Tester<T,U> {
   using Tester<T,U>::TestErrorCount;
   using Tester<T,U>::TestErrorCodes;
   using Tester<T,U>::GetOffsets;
+  using Tester<T,U>::GetOptionsString;
 
   // Test settings for the regular test. Append to these lists in case more tests are required.
   const std::vector<size_t> kVectorDims = { 7, 93, 4096 };
